--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -37,7 +37,7 @@ div.tooltip {
        padding: 5px;
        font-size: 14px;
        font-weight: bold;
-       background: #ccc;
+       background: lightsteelblue;
        border: 0px;
        border-radius: 8px;
        font-family: "Akkurat",sans-serif;
